edition = "2023";

package syncthing.config.v2;

import "config/v2/options_configuration.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

message DeviceConfiguration {
  string device_id = 1;
  bool enabled = 2 [default = true];
  string name = 3;
  URLs addresses = 4;
  Compression compression = 5 [default = COMPRESSION_METADATA];
  string certificate_common_name = 6 [default = "syncthing"];
  bool introducer = 7;
  bool skip_introduction_removals = 8;
  string introduced_by = 9;
  repeated string allowed_networks = 10;
  bool auto_accept_folders = 11;
  RateLimits rate_limits = 12;
  int32 max_request_kib = 13 [default = 32768];
  bool untrusted = 14;
  int32 remote_gui_port = 15;
  int32 num_connections = 16 [default = 3];
}

enum Compression {
  COMPRESSION_UNSPECIFIED = 0;
  COMPRESSION_METADATA = 1;
  COMPRESSION_NEVER = 2;
  COMPRESSION_ALWAYS = 3;
}
